<resources>
    <string name="app_name">TicketsClient</string>
    <string name="price">Price</string>
    <string name="custom_ticket_row_name">Name</string>
    <string name="custom_ticket_row_price">Price</string>
    <string name="custom_ticket_row_description">Description</string>
    <string name="custom_ticket_row_validity_time">Validity time</string>
    <string name="custom_ticket_row_buy_it">Buy it</string>
    <string name="custom_history_ticket_validity_time">Validity time</string>
    <string name="custom_history_ticket_status">Status</string>
    <string name="custom_history_ticket_valid_to_date">Valid to date</string>
    <string name="custom_history_ticket_validate_the_ticket">Validate the ticket</string>
    <string name="back">Back</string>
    <string name="activity_history_back">Back</string>
    <string name="activity_login_login">Login</string>
    <string name="activity_login_register">Register</string>
    <string name="activity_my_account_back">Back</string>
    <string name="activity_my_account_username">Username</string>
    <string name="activity_my_account_password">Password</string>
    <string name="activity_my_account_email">Email</string>
    <string name="activity_my_account_first_name">First name</string>
    <string name="activity_my_account_last_name">Last name</string>
    <string name="activity_my_account_balance">Balance</string>
    <string name="activity_my_account_recharge_account">Recharge account</string>
    <string name="activity_my_account_hint_username">Username</string>
    <string name="activity_my_account_hint_password">Password</string>
    <string name="activity_my_account_hint_first_name">First name</string>
    <string name="activity_my_account_hint_last_name">Last name</string>
    <string name="activity_my_account_hint_email">Email</string>
    <string name="activity_my_account_hint_balance">Balance</string>
    <string name="activity_my_account_hint_recharge_your_account">Recharge your account</string>
    <string name="activity_my_account_hint__0">0</string>
    <string name="activity_my_account_button_recharge">Recharge</string>
    <string name="activity_main_my_account">My account</string>
    <string name="activity_main_history">History</string>
    <string name="activity_main_buy_ticket">Buy ticket</string>
    <string name="activity_main_logout">Logout</string>
    <string name="activity_register_hint_username">Username</string>
    <string name="activity_register_hint_password">Password</string>
    <string name="activity_register_hint_first_name">First name</string>
    <string name="activity_register_hint_last_name">Last name</string>
    <string name="activity_register_hint_email">Email</string>
    <string name="activity_register_hint_back">Back</string>
    <string name="activity_register_hint_register">Register!</string>
    <string name="activity_login_username">Username</string>
    <string name="activity_login_password">Password</string>
</resources>
