<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPrice" />

    <TextView
        android:text="@string/custom_history_ticket_validity_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewValidityTime" />

    <TextView
        android:text="@string/custom_history_ticket_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStatus" />

    <TextView
        android:text="@string/custom_history_ticket_valid_to_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewValidToDate" />

    <Button
        android:text="@string/custom_history_ticket_validate_the_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonValidateTheTicket" />

</LinearLayout>