<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/custom_ticket_row_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewName" />

    <TextView
        android:text="@string/custom_ticket_row_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPrice" />

    <TextView
        android:text="@string/custom_ticket_row_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/textViewDescription"
        android:layout_weight="0.07" />

    <TextView
        android:text="@string/custom_ticket_row_validity_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewValidityTime" />

    <Button
        android:text="@string/custom_ticket_row_buy_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBuy" />
</LinearLayout>